Configuration, templating, and test content. - Add first post for testing the site (and which will eventually be used on the site itself). - Add default-template field to config.yaml and make source and destination for site absolute paths instead of relative - Add the stylesheet (totally empty at present) for the 'clean' template

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -1,4 +1,5 @@
 site-name: Step Stool Demo
 root: http://step-stool.io/demo
-content-source: ./source
-content-output: ./generated-site
+content-source: /Users/chris/development/personal_projects/step-stool/sample/source
+content-output: /Users/chris/development/personal_projects/step-stool/sample/generated-site
+default-template: clean
