Fix location of site in config.yaml; move generate_content call to content.py; add a DictAsMember mixin for config data; add validate() method for Configurator.

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -1,33 +1,42 @@
 # Basic site configuration
-site_name: Step Stool Demo
-root: http://step-stool.io/demo
-content_source: /Users/chris/development/personal_projects/step-stool/sample/source
-content_output: /Users/chris/development/personal_projects/step-stool/sample/generated-site
-template_directory: /Users/chris/development/personal_projects/step-stool/sample/templates
-default_template: clean
+site:
+  site_name: Step Stool Demo
+  root: http://step-stool.io/demo
+  content_source: /Users/chris/development/personal_projects/step_stool/sample/source
+  content_output: /Users/chris/development/personal_projects/step_stool/sample/generated-site
+  template_directory: /Users/chris/development/personal_projects/step_stool/sample/templates
+  default_template: clean
 
 # Publication configuration
-remote:
-  - push: true
-  - push_method: # must be one of ssh, sftp, or ftp-ssl
+publication:
+  remote:
+    push: true
+    push_method: # must be one of ssh, sftp, or ftp-ssl
 
-git:
-  - push: false
-  - repository: # ignored if push = false
-  - push_method: # must be one of local, ssh, or https
-  - https_username: # only required if pushing via https - NOT RECOMMENDED
-  - https_password: # only required if pushing via https - NOT RECOMMENDED
+  git:
+    push: false
+    repository: # ignored if push = false
+    push_method: # must be one of local, ssh, or https
+    https_username: # only required if pushing via https - NOT RECOMMENDED
+    https_password: # only required if pushing via https - NOT RECOMMENDED
 
-hg:
-  - push: false
-  - repository: # ignored if push = false
-  - push_method: # must be either local, ssh, or https
-  - https_username: # only required if pushing via https - NOT RECOMMENDED
-  - https_password: # only required if pushing via https - NOT RECOMMENDED
+  hg:
+    push: false
+    repository: # ignored if push = false
+    push_method: # must be either local, ssh, or https
+    https_username: # only required if pushing via https - NOT RECOMMENDED
+    https_password: # only required if pushing via https - NOT RECOMMENDED
 
 # Detailed configuration
 archives:
-  - generate: true
-  - categories: true
-  - tags: true
-  - author: false
+  generate: true
+  categories: true
+  tags: true
+  author: false
+
+markdown_extensions: # See http://pythonhosted.org/Markdown/extensions/index.html for a list of extensions
+  codehilite: # depends on Pygments (installed by default with
+  extra: # includes a number of modules corresponding to the PHP Extra Markdown syntax
+  headerid: # adds an ID attribute to header elements in HTML
+  meta: # returns metadata from the top of Markdown files (like in MultiMarkdown)
+  smartypants: # Smartypants typography
