--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -2,6 +2,9 @@
 # indentation of existing values! If you extend the file, you can of course
 # supply whatever data you like. Note that PyYAML currently only supports the
 # YAML 1.1 standard, not YAML 1.2.
+#
+# If you corrupt the existing version of a file, you can always generate a new
+# one in the default state by running `step-stool --copy_defaults <filename>
 
 site:
   name: Step Stool Demo
@@ -13,12 +16,19 @@ site:
     directory: /Users/chris/development/personal_projects/step_stool/sample/templates
     default: clean
   render_options:
-    use_categories: true
-    use_tags: true
     posts_per_page: 5 # used on archive, categories, and tags pages
+    blog:
+      use: true
+      slug: # defaults to 'blog'
+    categories:
+      use: true
+      slug: # defaults to 'categories'
+    tags:
+      use: true
+      slug: # defaults to 'tags'
     home:
-      blog: true
-      slug: # ignored if `blog` is `true`
+      use: false
+      page: # ignored unless 'use' is 'true'; otherwise, the slug (with no extension) for the page
 
 publication:
   remote:
