Another blog post, category restrictions, docstrings, and generator function work. - Add post on configuration and generating content. - Add docstring for `print_default_config()` - Create a named_tuple for html/metadata pair in each piece of content - Order generator functions alphabetically in the file - Add a detailed docstring for `generate_home()`and (newly created) `generate_pages()`functions

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -23,6 +23,8 @@ site:
     categories:
       use: true
       slug: # defaults to 'categories'
+      restrict: # if left blank and with no children, categories can be named arbitrarily
+        - History
     tags:
       use: true
       slug: # defaults to 'tags'
