Now actually render content through Jinja2 templates. - Add site configuration info to Renderer object - Return a rendered version of the page from Renderer::render_page() - Renderer::__get_template():     + Set `template_name` to `'default'` to minimize number of checks that need to be done in the body of the method     + Store templates already retrieved in a dictionary in the object to minimize calls to the file system (no need to get the same template over and over again)     + Add docstring - Miscellaneous tweaks:     + Rename `converted_content` to `converted_documents` and several instances of `content` to `documents` to reduce ambiguity     + Rename `render_options` to `options`.

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -15,7 +15,7 @@ site:
   template:
     directory: /Users/chris/development/personal_projects/step_stool/sample/templates/clean
     default: base.html
-  render_options:
+  options:
     posts_per_page: 5 # used on archive, categories, and tags pages
     blog:
       use: true
