Generate and print actual html pages via slightly updated base template. Add more info to base configuration file. Continue shifting to `documentation` instead of `content` and use `slug` instead of `page` in a number of places to make nomenclature more clear.

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -29,7 +29,7 @@ site:
       use: true
       slug: # defaults to 'tags'
     home:
-      use: false
+      use: false # use a standalone home page, rather than the latest blog posts(s)
       page: # ignored unless 'use' is 'true'; otherwise, the slug (with no extension) for the page
 
 publication:
