Fix typo in first-steps post. Change markdown_extensions setting in config file to a list, rather than a dictionary.

--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -52,8 +52,8 @@ publication:
     https_password: # only required if pushing via https - NOT RECOMMENDED
 
 markdown_extensions: # See http://pythonhosted.org/Markdown/extensions/index.html for a list of extensions
-  codehilite: # depends on Pygments (installed by default with
-  extra: # includes a number of modules corresponding to the PHP Extra Markdown syntax
-  headerid: # adds an ID attribute to header elements in HTML
-  meta: # returns metadata from the top of Markdown files (like in MultiMarkdown)
-  smartypants: # Smartypants typography
+  - codehilite # depends on Pygments (installed by default with
+  - extra # includes a number of modules corresponding to the PHP Extra Markdown syntax
+  - headerid # adds an ID attribute to header elements in HTML
+  - meta # returns metadata from the top of Markdown files (like in MultiMarkdown)
+  - smartypants # Smartypants typography
