--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -15,6 +15,8 @@ site:
   template:
     directory: /Users/chris/development/personal_projects/step_stool/sample/templates/clean
     default: base.html
+    copy_elements:
+      - css
   options:
     posts_per_page: 5 # used on archive, categories, and tags pages
     blog:
