--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -31,8 +31,8 @@ site:
       use: true
       slug: # defaults to 'tags'
     home:
-      use: # use a standalone home page, rather than the latest blog posts(s)
-      slug: # ignored unless 'use' is 'true'; otherwise, the slug (with no extension) for the basis document
+      use: true
+      slug: home
 
 publication:
   remote:
