Tweak home page generation: only generate 'index.html', not whatever the slug from which it is generated is. Continue working on documentation in readme file, and add a roadmap. Ignore folders for package distribution.

--- a/.hgignore
+++ b/.hgignore
@@ -42,3 +42,8 @@ atlassian-ide-plugin.xml
 
 # Generated version of site
 sample/generated-site
+
+# Python egg builds/dist/etc
+build
+dist
+*.egg-info
