--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -22,6 +22,7 @@ site:
     blog:
       use: true
       slug: # defaults to 'blog'
+      template: # if left blank, the template.default option will be used
     categories:
       use: true
       slug: # defaults to 'categories'
