--- a/sample/config.yaml
+++ b/sample/config.yaml
@@ -35,13 +35,13 @@ site:
       template: # if left blank, the template.default option will be used
     home:
       use: # use a standalone home page, rather than a list of the latest blog posts(s)
-      slug: # the slug (with no extension) from which to generate the index page. See documentation!
+      source_slug: # the slug (with no extension) from which to generate the index page. See documentation!
       template: # if blank the template.default will be used; a page-specified template overrides this
 
 publication:
   remote:
     push: true
-    push_method: # must be one of ssh, sftp, or ftp-ssl
+    push_method: ssh # must be one of ssh, sftp, or ftp-ssl
 
   git:
     push: false
